Ready for 1st deployment

--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8" />
     <meta content="width=device-width, initial-scale=1.0" name="viewport" />
-    <title>DEKA & ASSOCIATES | Tech-Forward Advisory</title>
+    <title>DEKA & ASSOCIATES</title>
 
     <link rel="icon" type="image/webp" href="logo.webp">
 
