feat: Corporate Theme Overhaul, Supabase Integration & Typography Update

--- a/public/privacy.html
+++ b/public/privacy.html
@@ -7,14 +7,15 @@
     <title>Privacy Policy | DEKA & ASSOCIATES</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css2?family=Space+Grotesk:wght@300;400;500;600;700&display=swap"
+    <link
+        href="https://fonts.googleapis.com/css2?family=DM+Sans:ital,opsz,wght@0,9..40,100..1000;1,9..40,100..1000&display=swap"
         rel="stylesheet">
     <script>
         tailwind.config = {
             theme: {
                 extend: {
                     fontFamily: {
-                        sans: ['Space Grotesk', 'sans-serif'],
+                        sans: ['DM Sans', 'sans-serif'],
                     },
                     colors: {
                         primary: '#6366f1',
@@ -38,29 +39,30 @@
         }
     </script>
     <style>
-        body {
+        /* body {
             background-color: #0f172a;
             color: #e2e8f0;
-        }
+        } */
 
         .glass {
-            background: rgba(15, 23, 42, 0.6);
+            background: rgba(255, 255, 255, 0.7);
             backdrop-filter: blur(12px);
             -webkit-backdrop-filter: blur(12px);
-            border: 1px solid rgba(255, 255, 255, 0.05);
+            border: 1px solid rgba(255, 255, 255, 0.5);
         }
 
         .glass-card {
-            background: rgba(30, 41, 59, 0.4);
+            background: rgba(255, 255, 255, 0.8);
             backdrop-filter: blur(12px);
             -webkit-backdrop-filter: blur(12px);
-            border: 1px solid rgba(255, 255, 255, 0.05);
+            border: 1px solid rgba(226, 232, 240, 0.8);
             transition: all 0.3s ease;
+            box-shadow: 0 4px 6px -1px rgb(0 0 0 / 0.1), 0 2px 4px -2px rgb(0 0 0 / 0.1);
         }
     </style>
 </head>
 
-<body class="antialiased selection:bg-primary/30 selection:text-white">
+<body class="antialiased selection:bg-blue-100 selection:text-blue-900 bg-slate-50 text-slate-900">
 
     <!-- Navigation -->
     <nav class="fixed top-0 w-full z-50 px-6 py-4">
@@ -93,7 +95,7 @@
             <h1 class="text-4xl md:text-6xl font-bold mb-4">Privacy <span
                     class="text-transparent bg-clip-text bg-gradient-to-r from-primary to-accent-purple">Policy</span>
             </h1>
-            <p class="text-slate-400 text-lg">Deka & Associates</p>
+            <p class="text-slate-600 text-lg">Deka & Associates</p>
         </div>
     </section>
 
@@ -104,12 +106,12 @@
 
                 <!-- 1. Introduction -->
                 <div class="space-y-4">
-                    <h2 class="text-2xl font-bold text-white flex items-center gap-3">
+                    <h2 class="text-2xl font-bold text-slate-800 flex items-center gap-3">
                         <span
                             class="flex items-center justify-center w-8 h-8 rounded-full bg-primary/20 text-primary text-sm">1</span>
                         Introduction
                     </h2>
-                    <div class="text-slate-400 leading-relaxed pl-11 space-y-2">
+                    <div class="text-slate-600 leading-relaxed pl-11 space-y-2">
                         <p>Deka & Associates ("Firm", "we", "our", "us") is committed to protecting the privacy and
                             confidentiality of individuals who visit our website or communicate with us.</p>
                         <p>This website is informational in nature. It does not process financial documents or collect
@@ -119,12 +121,12 @@
 
                 <!-- 2. Nature of Website -->
                 <div class="space-y-4">
-                    <h2 class="text-2xl font-bold text-white flex items-center gap-3">
+                    <h2 class="text-2xl font-bold text-slate-800 flex items-center gap-3">
                         <span
                             class="flex items-center justify-center w-8 h-8 rounded-full bg-primary/20 text-primary text-sm">2</span>
                         Nature of Website
                     </h2>
-                    <div class="text-slate-400 leading-relaxed pl-11 space-y-2">
+                    <div class="text-slate-600 leading-relaxed pl-11 space-y-2">
                         <p>The Deka & Associates website:</p>
                         <ul class="list-disc list-outside pl-4 space-y-1">
                             <li>Provides information about our services</li>
@@ -139,14 +141,14 @@
 
                 <!-- 3. Information We Collect Through Website -->
                 <div class="space-y-4">
-                    <h2 class="text-2xl font-bold text-white flex items-center gap-3">
+                    <h2 class="text-2xl font-bold text-slate-800 flex items-center gap-3">
                         <span
                             class="flex items-center justify-center w-8 h-8 rounded-full bg-primary/20 text-primary text-sm">3</span>
                         Information We Collect Through Website
                     </h2>
-                    <div class="text-slate-400 leading-relaxed pl-11 space-y-4">
+                    <div class="text-slate-600 leading-relaxed pl-11 space-y-4">
                         <div>
-                            <p class="font-bold text-slate-300 mb-2">When you visit or contact us through the website,
+                            <p class="font-bold text-slate-800 mb-2">When you visit or contact us through the website,
                                 we may collect:</p>
                             <ul class="list-disc list-outside pl-4 space-y-1">
                                 <li>Name</li>
@@ -156,7 +158,7 @@
                             </ul>
                         </div>
                         <div>
-                            <p class="font-bold text-slate-300 mb-2">We do not collect:</p>
+                            <p class="font-bold text-slate-800 mb-2">We do not collect:</p>
                             <ul class="list-disc list-outside pl-4 space-y-1">
                                 <li>PAN</li>
                                 <li>Aadhaar</li>
@@ -172,12 +174,12 @@
 
                 <!-- 4. Information Collected After Formal Engagement -->
                 <div class="space-y-4">
-                    <h2 class="text-2xl font-bold text-white flex items-center gap-3">
+                    <h2 class="text-2xl font-bold text-slate-800 flex items-center gap-3">
                         <span
                             class="flex items-center justify-center w-8 h-8 rounded-full bg-primary/20 text-primary text-sm">4</span>
                         Information Collected After Formal Engagement
                     </h2>
-                    <div class="text-slate-400 leading-relaxed pl-11 space-y-2">
+                    <div class="text-slate-600 leading-relaxed pl-11 space-y-2">
                         <p>Sensitive financial or compliance-related data is collected only after:</p>
                         <ul class="list-disc list-outside pl-4 space-y-1">
                             <li>Direct communication</li>
@@ -191,12 +193,12 @@
 
                 <!-- 5. Purpose of Collection -->
                 <div class="space-y-4">
-                    <h2 class="text-2xl font-bold text-white flex items-center gap-3">
+                    <h2 class="text-2xl font-bold text-slate-800 flex items-center gap-3">
                         <span
                             class="flex items-center justify-center w-8 h-8 rounded-full bg-primary/20 text-primary text-sm">5</span>
                         Purpose of Collection
                     </h2>
-                    <div class="text-slate-400 leading-relaxed pl-11 space-y-2">
+                    <div class="text-slate-600 leading-relaxed pl-11 space-y-2">
                         <p>Website data is used only for:</p>
                         <ul class="list-disc list-outside pl-4 space-y-1">
                             <li>Responding to inquiries</li>
@@ -210,12 +212,12 @@
 
                 <!-- 6. Data Security -->
                 <div class="space-y-4">
-                    <h2 class="text-2xl font-bold text-white flex items-center gap-3">
+                    <h2 class="text-2xl font-bold text-slate-800 flex items-center gap-3">
                         <span
                             class="flex items-center justify-center w-8 h-8 rounded-full bg-primary/20 text-primary text-sm">6</span>
                         Data Security
                     </h2>
-                    <div class="text-slate-400 leading-relaxed pl-11">
+                    <div class="text-slate-600 leading-relaxed pl-11">
                         <p>We implement reasonable safeguards to protect collected information. However, no internet
                             transmission is completely secure. Users share information at their own discretion.</p>
                     </div>
@@ -223,12 +225,12 @@
 
                 <!-- 7. Data Sharing -->
                 <div class="space-y-4">
-                    <h2 class="text-2xl font-bold text-white flex items-center gap-3">
+                    <h2 class="text-2xl font-bold text-slate-800 flex items-center gap-3">
                         <span
                             class="flex items-center justify-center w-8 h-8 rounded-full bg-primary/20 text-primary text-sm">7</span>
                         Data Sharing
                     </h2>
-                    <div class="text-slate-400 leading-relaxed pl-11 space-y-2">
+                    <div class="text-slate-600 leading-relaxed pl-11 space-y-2">
                         <p>We do not share website-collected personal information with third parties except:</p>
                         <ul class="list-disc list-outside pl-4 space-y-1">
                             <li>Where required by law</li>
@@ -241,12 +243,12 @@
 
                 <!-- 8. Data Retention -->
                 <div class="space-y-4">
-                    <h2 class="text-2xl font-bold text-white flex items-center gap-3">
+                    <h2 class="text-2xl font-bold text-slate-800 flex items-center gap-3">
                         <span
                             class="flex items-center justify-center w-8 h-8 rounded-full bg-primary/20 text-primary text-sm">8</span>
                         Data Retention
                     </h2>
-                    <div class="text-slate-400 leading-relaxed pl-11 space-y-2">
+                    <div class="text-slate-600 leading-relaxed pl-11 space-y-2">
                         <p>Basic contact information may be retained for communication and record-keeping purposes
                             unless deletion is requested and legally permissible.</p>
                         <p>Client records (after engagement) are retained as per statutory and regulatory requirements.
@@ -256,14 +258,14 @@
 
                 <!-- 9. User Rights -->
                 <div class="space-y-4">
-                    <h2 class="text-2xl font-bold text-white flex items-center gap-3">
+                    <h2 class="text-2xl font-bold text-slate-800 flex items-center gap-3">
                         <span
                             class="flex items-center justify-center w-8 h-8 rounded-full bg-primary/20 text-primary text-sm">9</span>
                         User Rights
                     </h2>
-                    <div class="text-slate-400 leading-relaxed pl-11 space-y-4">
+                    <div class="text-slate-600 leading-relaxed pl-11 space-y-4">
                         <div>
-                            <p class="font-bold text-slate-300 mb-2">Subject to applicable laws, users may:</p>
+                            <p class="font-bold text-slate-800 mb-2">Subject to applicable laws, users may:</p>
                             <ul class="list-disc list-outside pl-4 space-y-1">
                                 <li>Request access to personal data</li>
                                 <li>Request correction</li>
@@ -271,7 +273,7 @@
                             </ul>
                         </div>
                         <div class="glass p-4 rounded-lg mt-4">
-                            <p class="font-bold text-white mb-2">Requests can be sent to:</p>
+                            <p class="font-bold text-slate-800 mb-2">Requests can be sent to:</p>
                             <p>Email: banjeet.official@gmail.com</p>
                             <p>Phone: +91 9365828122</p>
                         </div>
@@ -280,12 +282,12 @@
 
                 <!-- 10. Third-Party Links -->
                 <div class="space-y-4">
-                    <h2 class="text-2xl font-bold text-white flex items-center gap-3">
+                    <h2 class="text-2xl font-bold text-slate-800 flex items-center gap-3">
                         <span
                             class="flex items-center justify-center w-8 h-8 rounded-full bg-primary/20 text-primary text-sm">10</span>
                         Third-Party Links
                     </h2>
-                    <p class="text-slate-400 leading-relaxed pl-11">
+                    <p class="text-slate-600 leading-relaxed pl-11">
                         Our website may contain links to external websites. We are not responsible for the privacy
                         practices of such third-party platforms.
                     </p>
@@ -293,13 +295,13 @@
 
                 <!-- 11. Limitation of Liability -->
                 <div class="space-y-4">
-                    <h2 class="text-2xl font-bold text-white flex items-center gap-3">
+                    <h2 class="text-2xl font-bold text-slate-800 flex items-center gap-3">
                         <span
                             class="flex items-center justify-center w-8 h-8 rounded-full bg-primary/20 text-primary text-sm">11</span>
                         Limitation of Liability
                     </h2>
-                    <div class="text-slate-400 leading-relaxed pl-11 space-y-2">
-                        <p class="font-bold text-slate-300 mb-2">Deka & Associates shall not be liable for:</p>
+                    <div class="text-slate-600 leading-relaxed pl-11 space-y-2">
+                        <p class="font-bold text-slate-800 mb-2">Deka & Associates shall not be liable for:</p>
                         <ul class="list-disc list-outside pl-4 space-y-1">
                             <li>Unauthorized access due to user negligence</li>
                             <li>Technical breaches beyond our reasonable control</li>
@@ -310,12 +312,12 @@
 
                 <!-- 12. Governing Law -->
                 <div class="space-y-4">
-                    <h2 class="text-2xl font-bold text-white flex items-center gap-3">
+                    <h2 class="text-2xl font-bold text-slate-800 flex items-center gap-3">
                         <span
                             class="flex items-center justify-center w-8 h-8 rounded-full bg-primary/20 text-primary text-sm">12</span>
                         Governing Law
                     </h2>
-                    <div class="text-slate-400 leading-relaxed pl-11">
+                    <div class="text-slate-600 leading-relaxed pl-11">
                         <p>This Privacy Policy is governed by the laws of India. Any disputes shall be subject to the
                             jurisdiction of courts located in: <strong>Guwahati, Assam, India</strong></p>
                     </div>
@@ -323,12 +325,12 @@
 
                 <!-- 13. Changes to This Policy -->
                 <div class="space-y-4">
-                    <h2 class="text-2xl font-bold text-white flex items-center gap-3">
+                    <h2 class="text-2xl font-bold text-slate-800 flex items-center gap-3">
                         <span
                             class="flex items-center justify-center w-8 h-8 rounded-full bg-primary/20 text-primary text-sm">13</span>
                         Changes to This Policy
                     </h2>
-                    <p class="text-slate-400 leading-relaxed pl-11">
+                    <p class="text-slate-600 leading-relaxed pl-11">
                         We reserve the right to update this Privacy Policy at any time. Updated versions will be
                         published on this page.
                     </p>
@@ -339,7 +341,7 @@
     </section>
 
     <!-- Footer -->
-    <footer class="bg-background-dark border-t border-white/5 py-12 px-6">
+    <footer class="bg-slate-900 text-slate-300 border-t border-slate-800 py-12 px-6">
         <div class="max-w-7xl mx-auto flex flex-col md:flex-row justify-between items-center space-y-8 md:space-y-0">
             <div class="flex flex-col items-center md:items-start space-y-4">
                 <div class="flex items-center space-x-3">
@@ -347,16 +349,16 @@
                     <span class="text-xl font-bold uppercase tracking-tight">DEKA <span class="text-primary">&</span>
                         ASSOCIATES</span>
                 </div>
-                <p class="text-slate-500 text-xs text-center md:text-left uppercase">© 2026 DEKA & ASSOCIATES. All
+                <p class="text-slate-400 text-xs text-center md:text-left uppercase">© 2026 DEKA & ASSOCIATES. All
                     rights reserved.<br />H. No 8, Akashi Path, Guwahati, Assam 781024.</p>
             </div>
             <div class="flex space-x-12">
                 <div class="space-y-3">
                     <h5 class="text-sm font-bold uppercase tracking-wider">Legal</h5>
                     <ul class="text-xs text-slate-500 space-y-2">
-                        <li><a href="privacy.html" class="hover:text-primary transition-colors text-primary">Privacy
+                        <li><a href="privacy.html" class="hover:text-white transition-colors text-white">Privacy
                                 Policy</a></li>
-                        <li><a href="terms.html" class="hover:text-primary transition-colors">Terms & Conditions</a>
+                        <li><a href="terms.html" class="hover:text-white transition-colors">Terms & Conditions</a>
                         </li>
                     </ul>
                 </div>
