chore: Update 'Headquarters' to 'Office' in Contact section

--- a/public/index.html
+++ b/public/index.html
@@ -1004,7 +1004,7 @@
         <div class="max-w-7xl mx-auto px-6">
             <div class="glass rounded-2xl overflow-hidden grid md:grid-cols-3">
                 <div class="p-12 md:col-span-1 space-y-6">
-                    <h3 class="text-3xl font-bold uppercase">Our <br />Headquarters</h3>
+                    <h3 class="text-3xl font-bold uppercase">Our <br />Office</h3>
                     <div class="space-y-4">
                         <div>
                             <p class="text-xs uppercase font-bold text-primary mb-1">Registered Address</p>
