--- a/public/index.html
+++ b/public/index.html
@@ -4,9 +4,9 @@
 <head>
     <meta charset="utf-8" />
     <meta content="width=device-width, initial-scale=1.0" name="viewport" />
-    <title>DEKA & ASSOCIATES</title>
+    <title>Deka & Associates</title>
 
-    <link rel="icon" type="image/webp" href="logo.webp">
+    <link rel="icon" type="image/webp" href="./logo.webp">
 
     <script src="https://cdn.tailwindcss.com?plugins=forms,container-queries"></script>
     <link
@@ -129,9 +129,9 @@
     <nav class="fixed top-0 w-full z-50 px-6 py-4">
         <div class="max-w-7xl mx-auto flex items-center justify-between glass rounded-xl px-6 py-3">
             <div class="flex items-center space-x-3">
-                <img src="logo.webp" alt="DEKA & ASSOCIATES Logo" class="w-10 h-10 object-contain rounded">
-                <span class="text-xl font-bold tracking-tight uppercase">DEKA <span class="text-primary">&</span>
-                    ASSOCIATES</span>
+                <img src="./logo.webp" alt="Deka & Associates Logo" class="w-10 h-10 object-contain rounded">
+                <span class="text-xl font-bold tracking-tight">Deka <span class="text-primary">&</span>
+                    Associates</span>
             </div>
             <div class="hidden md:flex items-center space-x-8 text-sm font-medium tracking-wide">
                 <a class="hover:text-primary transition-colors" href="#services">Expertise</a>
@@ -178,11 +178,14 @@
                     </span>
                     <span>Strategic Financial & Regulatory Advisory</span>
                 </div>
-                <h1 class="text-5xl md:text-7xl font-bold leading-tight">
+                <h1 class="text-5xl md:text-7xl font-bold leading-tight tracking-tight mb-4">
+                    Deka <span class="text-primary">&</span> Associates
+                </h1>
+                <h2 class="text-3xl md:text-5xl font-bold leading-tight text-slate-800">
                     Business Registration, <span
                         class="text-transparent bg-clip-text bg-gradient-to-r from-primary to-accent-purple">Taxation &
                         Compliance</span> Support
-                </h1>
+                </h2>
                 <p class="text-lg text-slate-600 max-w-lg leading-relaxed">
                     Structured guidance for individuals, startups, NGOs, Companies and NRIs.
                 </p>
@@ -1043,11 +1046,11 @@
         <div class="max-w-7xl mx-auto flex flex-col md:flex-row justify-between items-center space-y-8 md:space-y-0">
             <div class="flex flex-col items-center md:items-start space-y-4">
                 <div class="flex items-center space-x-3">
-                    <img src="logo.webp" alt="DEKA & ASSOCIATES Logo" class="w-6 h-6 object-contain">
-                    <span class="text-xl font-bold uppercase tracking-tight">DEKA <span class="text-primary">&</span>
-                        ASSOCIATES</span>
+                    <img src="logo.webp" alt="Deka & Associates Logo" class="w-6 h-6 object-contain">
+                    <span class="text-xl font-bold tracking-tight">Deka <span class="text-primary">&</span>
+                        Associates</span>
                 </div>
-                <p class="text-slate-400 text-xs text-center md:text-left uppercase">© 2026 DEKA & ASSOCIATES. All
+                <p class="text-slate-400 text-xs text-center md:text-left">© 2026 Deka & Associates. All
                     rights reserved.<br />H. No 8, Akashi Path, Guwahati, Assam 781024.</p>
             </div>
             <div class="flex space-x-12">
