--- a/public/terms.html
+++ b/public/terms.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Terms & Conditions | DEKA & ASSOCIATES</title>
+    <title>Terms & Conditions | Deka & Associates</title>
     <script src="https://cdn.tailwindcss.com"></script>
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <link
@@ -69,9 +69,9 @@
         <div class="max-w-7xl mx-auto flex items-center justify-between glass rounded-xl px-6 py-3">
             <div class="flex items-center space-x-3">
                 <a href="index.html" class="flex items-center space-x-3">
-                    <img src="logo.webp" alt="DEKA & ASSOCIATES Logo" class="w-10 h-10 object-contain rounded">
-                    <span class="text-xl font-bold tracking-tight uppercase">DEKA <span class="text-primary">&</span>
-                        ASSOCIATES</span>
+                    <img src="logo.webp" alt="Deka & Associates Logo" class="w-10 h-10 object-contain rounded">
+                    <span class="text-xl font-bold tracking-tight">Deka <span class="text-primary">&</span>
+                        Associates</span>
                 </a>
             </div>
             <div class="hidden md:flex items-center space-x-8 text-sm font-medium tracking-wide">
@@ -417,11 +417,11 @@
         <div class="max-w-7xl mx-auto flex flex-col md:flex-row justify-between items-center space-y-8 md:space-y-0">
             <div class="flex flex-col items-center md:items-start space-y-4">
                 <div class="flex items-center space-x-3">
-                    <img src="logo.webp" alt="DEKA & ASSOCIATES Logo" class="w-6 h-6 object-contain">
-                    <span class="text-xl font-bold uppercase tracking-tight">DEKA <span class="text-primary">&</span>
-                        ASSOCIATES</span>
+                    <img src="logo.webp" alt="Deka & Associates Logo" class="w-6 h-6 object-contain">
+                    <span class="text-xl font-bold tracking-tight">Deka <span class="text-primary">&</span>
+                        Associates</span>
                 </div>
-                <p class="text-slate-400 text-xs text-center md:text-left uppercase">© 2026 DEKA & ASSOCIATES. All
+                <p class="text-slate-400 text-xs text-center md:text-left">© 2026 Deka & Associates. All
                     rights reserved.<br />H. No 8, Akashi Path, Guwahati, Assam 781024.</p>
             </div>
             <div class="flex space-x-12">
