Add SEO meta tags and Open Graph data

--- a/public/index.html
+++ b/public/index.html
@@ -5,6 +5,26 @@
     <meta charset="utf-8" />
     <meta content="width=device-width, initial-scale=1.0" name="viewport" />
     <title>Deka & Associates</title>
+    <meta name="description"
+        content="Business Registration, Taxation & Compliance Support. Structured guidance for individuals, startups, NGOs, Companies and NRIs.">
+    <meta name="keywords"
+        content="Chartered Accountant, Tax Consultant, GST Registration, Income Tax Filing, Business Registration, Guwahati, Assam, NGO Registration, 80G 12A, Project Report, CMA Data">
+
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://www.dekaandassociates.in/">
+    <meta property="og:title" content="Deka & Associates - Strategic Financial & Regulatory Advisory">
+    <meta property="og:description"
+        content="Business Registration, Taxation & Compliance Support. Structured guidance for individuals, startups, NGOs, Companies and NRIs.">
+    <meta property="og:image" content="https://www.dekaandassociates.in/logo.webp">
+
+    <!-- Twitter -->
+    <meta property="twitter:card" content="summary_large_image">
+    <meta property="twitter:url" content="https://www.dekaandassociates.in/">
+    <meta property="twitter:title" content="Deka & Associates - Strategic Financial & Regulatory Advisory">
+    <meta property="twitter:description"
+        content="Business Registration, Taxation & Compliance Support. Structured guidance for individuals, startups, NGOs, Companies and NRIs.">
+    <meta property="twitter:image" content="https://www.dekaandassociates.in/logo.webp">
 
     <link rel="icon" type="image/webp" href="./logo.webp">
 
