--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="utf-8" />
     <meta content="width=device-width, initial-scale=1.0" name="viewport" />
-    <title>Deka & Associates</title>
+    <title>Deka and Associates</title>
     <meta name="description"
         content="Business Registration, Taxation & Compliance Support. Structured guidance for individuals, startups, NGOs, Companies and NRIs.">
     <meta name="keywords"
@@ -13,7 +13,7 @@
     <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website">
     <meta property="og:url" content="https://www.dekaandassociates.in/">
-    <meta property="og:title" content="Deka & Associates - Strategic Financial & Regulatory Advisory">
+    <meta property="og:title" content="Deka and Associates">
     <meta property="og:description"
         content="Business Registration, Taxation & Compliance Support. Structured guidance for individuals, startups, NGOs, Companies and NRIs.">
     <meta property="og:image" content="https://www.dekaandassociates.in/logo.webp">
@@ -21,12 +21,14 @@
     <!-- Twitter -->
     <meta property="twitter:card" content="summary_large_image">
     <meta property="twitter:url" content="https://www.dekaandassociates.in/">
-    <meta property="twitter:title" content="Deka & Associates - Strategic Financial & Regulatory Advisory">
+    <meta property="twitter:title" content="Deka and Associates">
     <meta property="twitter:description"
         content="Business Registration, Taxation & Compliance Support. Structured guidance for individuals, startups, NGOs, Companies and NRIs.">
     <meta property="twitter:image" content="https://www.dekaandassociates.in/logo.webp">
 
     <link rel="icon" type="image/webp" href="./logo.webp">
+    <link rel="apple-touch-icon" href="./logo.webp">
+    <link rel="manifest" href="./manifest.json">
 
     <script src="https://cdn.tailwindcss.com?plugins=forms,container-queries"></script>
     <link
